--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,9 +7,9 @@ media_folder: "public/images"
 public_folder: "/images" 
 
 collections:
-  - name: "posts" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog Posts" # Used in the UI
-    folder: "posts" # The path to the folder where the documents are stored
+  - name: "categories" # Used in routes, e.g., /admin/collections/blog
+    label: "Categories" # Used in the UI
+    folder: "categories" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
